--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start": "node dist/index.js",
     "dev": "tsc -w",
     "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix"
+    "lint:fix": "eslint . --ext .ts --fix",
+    "connectUser": "node dist/connectUser.js"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,8 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
+    "composio-core": "^0.5.39",
+    "dotenv": "^16.5.0",
     "express": "^5.0.1"
   },
   "devDependencies": {
