--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # Server Configuration
 PORT=3000
 
-# MCP Configuration
-ZAPIER_MCP_URL=your-mcp-url-from-zapier
+# composio configuration
+COMPOSIO_API_KEY="r0g2sns2acou2j1guemap"
+COMPOSIO_GMAIL_INTEGRATION_ID="4a52292a-a608-4bfe-96b7-d7dbfac4e696"
