--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "dist/index.js",
   "type": "module",
   "engines": {
-    "node": ">=22.0.0"
+    "node": ">=20.0.0"
   },
   "scripts": {
     "build": "tsc",
@@ -23,12 +23,14 @@
     "composio-core": "^0.5.39",
     "dotenv": "^16.5.0",
     "express": "^5.0.1",
-    "jsonpath": "^1.1.1"
+    "jsonpath": "^1.1.1",
+    "turndown": "^7.2.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/jsonpath": "^0.2.4",
     "@types/node": "^22.0.2",
+    "@types/turndown": "^5.0.5",
     "@typescript-eslint/eslint-plugin": "^7.1.0",
     "@typescript-eslint/parser": "^7.1.0",
     "eslint": "^8.57.0",
