rotate composio api key

--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@
 PORT=3002
 
 # composio configuration
-COMPOSIO_API_KEY="r0g2sns2acou2j1guemap"
-COMPOSIO_GMAIL_INTEGRATION_ID="4a52292a-a608-4bfe-96b7-d7dbfac4e696"
+COMPOSIO_API_KEY=somecomposioapikey
+COMPOSIO_GMAIL_INTEGRATION_ID=somegmailintegration
