--- a/phala-compose.yaml
+++ b/phala-compose.yaml
@@ -8,3 +8,5 @@ services:
       - COMPOSIO_GMAIL_INTEGRATION_ID=${COMPOSIO_GMAIL_INTEGRATION_ID}
       - COMPOSIO_FB_INTEGRATION_ID=${COMPOSIO_FB_INTEGRATION_ID}
       - ENV_VAR_SECRET_TEST=${ENV_VAR_SECRET_TEST}
+    ports:
+      - 3002:3002
