--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   "description": "",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.0",
+    "@phala/dstack-sdk": "^0.2.2",
     "composio-core": "^0.5.39",
     "dotenv": "^16.5.0",
+    "ethers": "^5.8.0",
     "express": "^5.0.1",
     "jsonpath": "^1.1.1",
     "turndown": "^7.2.0"
